[package]
name = "megarust"
version = "0.1.0"
authors = ["Carson Swoveland <sciencedude2003@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.13.2"
num-traits = "0.2.10"
num-derive = "0.3.0"
bitpat = "0.1.1"
either = "1.5.3"
sdl2 = "0.32.2"
libc = "0.2.66"
lazy_static = "1.4.0"
bit_reverse = "0.1"
once_cell = "1.3.1"
unicorn = "0.8.0"
z80emu = "0.1"
log = "0.4.8"
fern = "0.5"
chrono = "0.4.11"
circular-queue = "0.2.3"
emu76489-sys = { path = "../emu76489-sys" }
nuked-opn2-sys = { path = "../nuked-opn2-sys" }

[build-dependencies]
bindgen = "0.53.1"